<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="45dp">

    <TextView
        android:id="@+id/txtRanking"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/ranking"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txtTeam" />

    <TextView
        android:id="@+id/txtTeam"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/team"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/txtRanking"
        app:layout_constraintRight_toLeftOf="@id/txtResult" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/result"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/txtTeam"
        app:layout_constraintRight_toLeftOf="@id/txtGoal" />

    <TextView
        android:id="@+id/txtGoal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/goal_difference"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/txtResult"
        app:layout_constraintRight_toLeftOf="@id/txtIntegral" />

    <TextView
        android:id="@+id/txtIntegral"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/integral"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/txtGoal"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/live_gary"
        app:layout_constraintLeft_toRightOf="@id/txtRanking" />

    <ImageView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/live_gary"
        app:layout_constraintLeft_toRightOf="@id/txtTeam" />

    <ImageView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/live_gary"
        app:layout_constraintLeft_toRightOf="@id/txtResult" />

    <ImageView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/live_gary"
        app:layout_constraintLeft_toRightOf="@id/txtGoal" />

</merge>