<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#F7FAFF"
    android:layout_height="36dp">

    <TextView
        android:id="@+id/txtDateTime"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/fight_date_time"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txtAgainst"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAgainst"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/against_team"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintLeft_toRightOf="@id/txtDateTime"
        app:layout_constraintRight_toLeftOf="@id/txtGoalGo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtGoalGo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/goal_go"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintLeft_toRightOf="@id/txtAgainst"
        app:layout_constraintRight_toLeftOf="@id/txtBs"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBs"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/bs"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintLeft_toRightOf="@id/txtGoalGo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="1px"
        android:layout_height="0dp"
        android:background="@color/live_gary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/txtDateTime"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="1px"
        android:layout_height="0dp"
        android:background="@color/live_gary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/txtAgainst"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="1px"
        android:layout_height="0dp"
        android:background="@color/live_gary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/txtGoalGo"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>